# mcts-gen

./: .gitignore  .readthedocs.yaml  GEMINI.md  README.md  pyproject.toml
.gemini/: settings.json
.github/workflows/: release.yml
docs/: conf.py  index.rst  modules.rst  paper.rst  quickstart.rst
obsidian/: Session_Summary_20251210.md  StoryBoard.md
obsidian/Specifications/: 007-LigandMCTS.md  008-AutonomousLearning.md  009-ExternalSource.md  010-GameSummary.md  013-FragmentGrowth.md  014-UpdateDocs.md  015-SpatialPartitioning.md  016-MopacFragmentRefactor.md
specs/001-chatgpt-20250902-txt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-update-documentation-and/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-readme-quickstart-uv/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-add-full-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-refactor-fastmcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-ligand-mcts-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-ai-learn-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-external-molecule-source/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-add-game-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-fragment-growth/: plan.md
specs/014-update-docs/: plan.md  spec.md  (+1 more)
(+47 files in other folders)
